--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="logo">
 				<hr class="line-1">
 				<a href="#">Aohan</a>
-				<span>Lorem ipsum dolor sit amet</span>
+				<span>Don't be worry, just go!</span>
 				<hr class="line-1">
 			</div>
 		</header>
@@ -134,5 +134,4 @@
 	</div>
 </body>
 <script src="js/script.js"></script>
-<script src="js/mymock.js"></script>
 </html>
